v0.0.5  Java 26 & Spring boot 4+